themis-parser/src/main/java/com/maishare/themis/parser/libra/LibraParser.java
// Generated from D:/workspaces/m-bravo/themis/themis/themis-parser/src/main/java/com/maishare/themis/parser/libra\Libra.g4 by ANTLR 4.8
package com.maishare.themis.parser.libra;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LibraParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		WS=18, EQUAL=19, DOLLAR=20, LIBRA=21, LINE_FEED=22, TRUE=23, FALSE=24, 
		ID=25, LETTER=26, DIGIT=27, COLON=28, STRING=29, ESC=30, NIL=31;
	public static final int
		RULE_file = 0, RULE_pair = 1, RULE_value = 2, RULE_stat = 3, RULE_varDecl = 4, 
		RULE_superCompDecl = 5, RULE_compDecl = 6, RULE_compType = 7, RULE_compName = 8, 
		RULE_params = 9, RULE_conditionDecl = 10, RULE_realBlock = 11, RULE_fakeBlock = 12, 
		RULE_conditionExpr = 13, RULE_followedCondition = 14, RULE_contrastCondExpr = 15, 
		RULE_conditionOps = 16, RULE_expr = 17, RULE_externalVarName = 18, RULE_digits = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "pair", "value", "stat", "varDecl", "superCompDecl", "compDecl", 
			"compType", "compName", "params", "conditionDecl", "realBlock", "fakeBlock", 
			"conditionExpr", "followedCondition", "contrastCondExpr", "conditionOps", 
			"expr", "externalVarName", "digits"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'@'", "'('", "','", "')'", "'if'", "'else'", "'end'", 
			"'&&'", "'||'", "'=='", "'!='", "'*'", "'/'", "'+'", "'-'", null, "'='", 
			"'$'", "'libra'", "';'", "'true'", "'false'", null, null, null, "':'", 
			null, null, "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "WS", "EQUAL", "DOLLAR", "LIBRA", 
			"LINE_FEED", "TRUE", "FALSE", "ID", "LETTER", "DIGIT", "COLON", "STRING", 
			"ESC", "NIL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Libra.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LibraParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(40);
				pair();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LibraParser.ID, 0); }
		public TerminalNode COLON() { return getToken(LibraParser.COLON, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitPair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(ID);
			setState(47);
			match(COLON);
			setState(48);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode STRING() { return getToken(LibraParser.STRING, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_value);
		int _la;
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(50);
				match(T__0);
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__6) | (1L << LIBRA) | (1L << ID))) != 0)) {
					{
					{
					setState(51);
					stat();
					}
					}
					setState(56);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(57);
				match(T__1);
				}
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public SuperCompDeclContext superCompDecl() {
			return getRuleContext(SuperCompDeclContext.class,0);
		}
		public CompDeclContext compDecl() {
			return getRuleContext(CompDeclContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public ConditionDeclContext conditionDecl() {
			return getRuleContext(ConditionDeclContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stat);
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				superCompDecl();
				}
				break;
			case LIBRA:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				compDecl();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				varDecl();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				conditionDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LibraParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(LibraParser.EQUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode LINE_FEED() { return getToken(LibraParser.LINE_FEED, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(ID);
			setState(68);
			match(EQUAL);
			setState(69);
			expr(0);
			setState(70);
			match(LINE_FEED);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SuperCompDeclContext extends ParserRuleContext {
		public CompDeclContext compDecl() {
			return getRuleContext(CompDeclContext.class,0);
		}
		public SuperCompDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_superCompDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterSuperCompDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitSuperCompDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitSuperCompDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SuperCompDeclContext superCompDecl() throws RecognitionException {
		SuperCompDeclContext _localctx = new SuperCompDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_superCompDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__2);
			setState(73);
			compDecl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompDeclContext extends ParserRuleContext {
		public TerminalNode LIBRA() { return getToken(LibraParser.LIBRA, 0); }
		public List<TerminalNode> COLON() { return getTokens(LibraParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(LibraParser.COLON, i);
		}
		public CompTypeContext compType() {
			return getRuleContext(CompTypeContext.class,0);
		}
		public CompNameContext compName() {
			return getRuleContext(CompNameContext.class,0);
		}
		public TerminalNode LINE_FEED() { return getToken(LibraParser.LINE_FEED, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public CompDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterCompDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitCompDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitCompDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompDeclContext compDecl() throws RecognitionException {
		CompDeclContext _localctx = new CompDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_compDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(LIBRA);
			setState(76);
			match(COLON);
			setState(77);
			compType();
			setState(78);
			match(COLON);
			setState(79);
			compName();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(80);
				params();
				}
			}

			setState(83);
			match(LINE_FEED);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompTypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LibraParser.ID, 0); }
		public CompTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterCompType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitCompType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitCompType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompTypeContext compType() throws RecognitionException {
		CompTypeContext _localctx = new CompTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_compType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LibraParser.ID, 0); }
		public CompNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterCompName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitCompName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitCompName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompNameContext compName() throws RecognitionException {
		CompNameContext _localctx = new CompNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(T__3);
			{
			setState(90);
			expr(0);
			}
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(91);
				match(T__4);
				{
				setState(92);
				expr(0);
				}
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionDeclContext extends ParserRuleContext {
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class,0);
		}
		public List<TerminalNode> COLON() { return getTokens(LibraParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(LibraParser.COLON, i);
		}
		public List<RealBlockContext> realBlock() {
			return getRuleContexts(RealBlockContext.class);
		}
		public RealBlockContext realBlock(int i) {
			return getRuleContext(RealBlockContext.class,i);
		}
		public List<FakeBlockContext> fakeBlock() {
			return getRuleContexts(FakeBlockContext.class);
		}
		public FakeBlockContext fakeBlock(int i) {
			return getRuleContext(FakeBlockContext.class,i);
		}
		public ConditionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterConditionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitConditionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitConditionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionDeclContext conditionDecl() throws RecognitionException {
		ConditionDeclContext _localctx = new ConditionDeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_conditionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__6);
			setState(101);
			conditionExpr();
			setState(102);
			match(COLON);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << LIBRA) | (1L << ID))) != 0)) {
				{
				{
				setState(103);
				realBlock();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(109);
				match(T__7);
				setState(110);
				match(COLON);
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << LIBRA) | (1L << ID))) != 0)) {
					{
					{
					setState(111);
					fakeBlock();
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(119);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RealBlockContext extends ParserRuleContext {
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public CompDeclContext compDecl() {
			return getRuleContext(CompDeclContext.class,0);
		}
		public SuperCompDeclContext superCompDecl() {
			return getRuleContext(SuperCompDeclContext.class,0);
		}
		public RealBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_realBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterRealBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitRealBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitRealBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RealBlockContext realBlock() throws RecognitionException {
		RealBlockContext _localctx = new RealBlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_realBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(121);
				varDecl();
				}
				break;
			case LIBRA:
				{
				setState(122);
				compDecl();
				}
				break;
			case T__2:
				{
				setState(123);
				superCompDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FakeBlockContext extends ParserRuleContext {
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public CompDeclContext compDecl() {
			return getRuleContext(CompDeclContext.class,0);
		}
		public SuperCompDeclContext superCompDecl() {
			return getRuleContext(SuperCompDeclContext.class,0);
		}
		public FakeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fakeBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterFakeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitFakeBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitFakeBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FakeBlockContext fakeBlock() throws RecognitionException {
		FakeBlockContext _localctx = new FakeBlockContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_fakeBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(126);
				varDecl();
				}
				break;
			case LIBRA:
				{
				setState(127);
				compDecl();
				}
				break;
			case T__2:
				{
				setState(128);
				superCompDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionExprContext extends ParserRuleContext {
		public ContrastCondExprContext contrastCondExpr() {
			return getRuleContext(ContrastCondExprContext.class,0);
		}
		public List<FollowedConditionContext> followedCondition() {
			return getRuleContexts(FollowedConditionContext.class);
		}
		public FollowedConditionContext followedCondition(int i) {
			return getRuleContext(FollowedConditionContext.class,i);
		}
		public ConditionExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterConditionExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitConditionExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitConditionExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionExprContext conditionExpr() throws RecognitionException {
		ConditionExprContext _localctx = new ConditionExprContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_conditionExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			contrastCondExpr();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) {
				{
				{
				setState(132);
				followedCondition();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FollowedConditionContext extends ParserRuleContext {
		public ConditionOpsContext conditionOps() {
			return getRuleContext(ConditionOpsContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FollowedConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_followedCondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).enterFollowedCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LibraListener ) ((LibraListener)listener).exitFollowedCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LibraVisitor ) return ((LibraVisitor<? extends T>)visitor).visitFollowedCondition(this);
			else return visitor.visitChildren(this);
		}
	}
